User can now add and delete tasks

--- a/client/templates/actions.html
+++ b/client/templates/actions.html
@@ -2,12 +2,20 @@
   <div class="columns">
     <div class="field has-addons">
       <div class="control">
-        <input class="input" type="text" placeholder="Tâche">
+        <input id="taskInput" class="input" type="text" placeholder="Tâche">
       </div>
       <div class="control">
-        <a class="button is-info">
+        <a id="addTask" class="button is-primary">
       Ajouter
     </a>
+      </div>
+    </div>
+    <div class="field">
+      <div class="control">
+        <label class="checkbox">
+      <input id="isTaskImportant" type="checkbox">
+      Important
+    </label>
       </div>
     </div>
   </div>
