--- a/client/stylesheets/_main.scss
+++ b/client/stylesheets/_main.scss
@@ -1,13 +1,29 @@
 .card {
     padding: 8px;
+    padding-right: 38px;
+    position: relative;
+    overflow: auto;
     &:hover {
+        .deleteTask {
+            opacity: 1;
+        }
         cursor: move;
     }
+}
+
+.deleteTask {
+    position: absolute!important;
+    top: 8px;
+    right: 8px;
+    padding: 0px 5px!important;
+    height: 19px!important;
+    opacity: 0;
 }
 
 #dragList .column {
     background: #f5f5f5;
     margin: 3px;
+    border-radius: 4px;
 }
 
 #backlog {
@@ -34,9 +50,29 @@
     border-top: 3px solid #2ecc71;
 }
 
+.importantIcon {
+    /*display: block;
+    position: absolute;
+    right: 8px;
+    width: 8px;
+    height: 20px;
+    background-image: url('../images/important_icon.svg');
+    background-size: 8px;
+    background-position: top right;
+    background-repeat: no-repeat;
+    top: 54%;
+    transform: translateY(-54%);
+    opacity: 0;*/
+}
+
+.isImportant {
+    opacity: 1;
+}
+
 .columnTitle {
     margin-bottom: 6px;
     font-weight: bold;
     text-transform: uppercase;
     opacity: 0.8;
+    text-align: center;
 }
