--- a/client/stylesheets/_colors.scss
+++ b/client/stylesheets/_colors.scss
@@ -1,8 +1,12 @@
 $abestos: #7f8c8d;
 $emerald: #2ecc71;
 $carrot: #e67e22;
+$pumpkin: #d35400;
 $alizarin: #e74c3c;
 $peterRiver: #3498db;
 $amethyst: #9b59b6;
 $wetAsphalt: #34495e;
 $midnightBlue: #2c3e50;
+$clouds: #ecf0f1;
+$turquoise: #1abc9c;
+$sunFlower: #f1c40f;
