--- a/client/templates/actions.html
+++ b/client/templates/actions.html
@@ -15,9 +15,9 @@
         <input id="taskInput" class="input" type="text" placeholder="Tâche">
       </div>
       <div class="control">
-        <a id="addTask" class="button is-primary">
+        <button id="addTask" class="button is-primary">
       Ajouter
-    </a>
+    </button>
       </div>
     </div>
     <div class="field">
