--- a/client/templates/colorCode.html
+++ b/client/templates/colorCode.html
@@ -3,9 +3,10 @@
     <label class="label">Code de couleur:</label>
     <div class="control">
       <div class="colors">
-        <div id="colorGreen" class="color colorGreen"></div>
-        <div id="colorRed" class="color colorRed"></div>
-        <div id="colorBlue" class="color colorBlue"></div>
+        <button id="colorGrey" class="button color colorGrey"></button>
+        <button id="colorGreen" class="button color colorGreen"></button>
+        <button id="colorRed" class="button color colorRed"></button>
+        <button id="colorBlue" class="button color colorBlue"></button>
       </div>
     </div>
   </div>
