--- a/client/templates/comments.html
+++ b/client/templates/comments.html
@@ -1,8 +1,15 @@
 <template name="comments">
   <div class="field">
     <label class="label">Commentaire(s):</label>
-    <div class="control">
-      <input class="input" type="text" placeholder="Écrire un commentaire">
+    <div class="field has-addons">
+      <div class="control">
+        <input id="commentInput" class="input" type="text" placeholder="Écrire un commentaire">
+      </div>
+      <div class="control">
+        <button id="addComment" class="button is-primary">
+      Ajouter
+    </button>
+      </div>
     </div>
   </div>
 </template>
