--- a/client/templates/dragList.html
+++ b/client/templates/dragList.html
@@ -5,8 +5,6 @@
       {{#each backlog}}
       <div class="card colorCode {{colorCode}}">
         <p class="content">{{content}}</p>
-        <button class="button is-outlined is-danger is-small deleteTask">X</button>
-        <span class="importantIcon {{isImportantClass(isImportant)}}"></span>
       </div>
       {{/each}}
     </div>
@@ -15,8 +13,6 @@
       {{#each todo}}
       <div class="card colorCode {{colorCode}}">
         <p class="content">{{content}}</p>
-        <button class="button is-outlined is-danger is-small deleteTask">X</button>
-        <span class="importantIcon {{isImportantClass(isImportant)}}"></span>
       </div>
       {{/each}}
     </div>
@@ -25,8 +21,6 @@
       {{#each inProgress}}
       <div class="card colorCode {{colorCode}}">
         <p class="content">{{content}}</p>
-        <button class="button is-outlined is-danger is-small deleteTask">X</button>
-        <span class="importantIcon {{isImportantClass(isImportant)}}"></span>
       </div>
       {{/each}}
     </div>
@@ -35,8 +29,6 @@
       {{#each meetings}}
       <div class="card colorCode {{colorCode}}">
         <p class="content">{{content}}</p>
-        <button class="button is-outlined is-danger is-small deleteTask">X</button>
-        <span class="importantIcon {{isImportantClass(isImportant)}}"></span>
       </div>
       {{/each}}
     </div>
@@ -45,8 +37,6 @@
       {{#each blocked}}
       <div class="card colorCode {{colorCode}}">
         <p class="content">{{content}}</p>
-        <button class="button is-outlined is-danger is-small deleteTask">X</button>
-        <span class="importantIcon {{isImportantClass(isImportant)}}"></span>
       </div>
       {{/each}}
     </div>
@@ -55,10 +45,12 @@
       {{#each done}}
       <div class="card colorCode {{colorCode}}">
         <p class="content">{{content}}</p>
-        <button class="button is-outlined is-danger is-small deleteTask">X</button>
-        <span class="importantIcon {{isImportantClass(isImportant)}}"></span>
       </div>
       {{/each}}
     </div>
   </div>
+  {{>comments}}
+  {{#each taskComments}}
+   {{content}}
+   {{/each}}
 </template>
