--- a/client/templates/modal.html
+++ b/client/templates/modal.html
@@ -1,9 +1,10 @@
 <template name="modal">
   <div class="anti-modal-box">
     <div class="anti-modal-body">
-      <h2 id="modalTaskId"></h2>
-      <h2 class="title" id="modalTaskTitle"></h2>
-      <h3 class="subtitle" id="modalTaskParent"></h3>
+      <button class="button is-outlined is-danger is-small is-pulled-right deleteTask">Supprimer</button>
+      <h2 id="modalTaskId">{{modalTaskId}}</h2>
+      <h2 class="title" id="modalTaskContent">{{modalTaskTitle}}</h2>
+      <h3 class="subtitle" id="modalTaskParent">{{modalTaskParent}}</h3>
       <p id="modalTaskDate"></p>
       {{>colorCode}} {{>comments}}
     </div>
