--- a/client/templates/dragList.html
+++ b/client/templates/dragList.html
@@ -1,4 +1,5 @@
 <template name="dragList">
+  <h1 id="clickedTask"></h1>
   <div id="dragList" class='columns'>
     <div id='backlog' class='column'>
       <h2 class="columnTitle">Backlog</h2>
@@ -49,8 +50,7 @@
       {{/each}}
     </div>
   </div>
-  {{>comments}}
-  {{#each taskComments}}
-   {{content}}
-   {{/each}}
+   {{#if showModal }}
+    {{> modal }}
+  {{/if}}
 </template>
