--- a/client/templates/dragList.html
+++ b/client/templates/dragList.html
@@ -50,7 +50,7 @@
       {{/each}}
     </div>
   </div>
-   {{#if showModal }}
+   <!--{{#if showModal }}
     {{> modal }}
-  {{/if}}
+  {{/if}}-->
 </template>
