--- a/client/templates/modal.html
+++ b/client/templates/modal.html
@@ -1,14 +1,14 @@
 <template name="modal">
   <div class="anti-modal-box">
     <div class="anti-modal-body">
-      <button class="button is-outlined is-danger is-small is-pulled-right deleteTask">Supprimer</button>
-      <h2 id="modalTaskId"></h2>
-      <h2 class="title" id="modalTaskContent">{{#with getClickedTask}} {{content}} {{/with}}
-      </h2>
-      <h3 class="subtitle" id="modalTaskParent"></h3>
-      <p id="modalTaskDate"></p>
+      <button class="button is-outlined is-danger is-small is-pulled-right deleteTask">Supprimer la tâche</button>
+      <h2 id="modalTaskId">{{getClickedTask._id}}</h2>
+      <h2 class="title" id="modalTaskContent">{{getClickedTask.content}}</h2>
+      <h3 class="subtitle" id="modalTaskParent">{{getClickedTask.parent}}</h3>
+      {{>taskDescription}}
+      <p id="modalTaskDate">{{getClickedTask.date}}</p>
       {{>colorCode}}
-      <!--{{>comments}}-->
+      {{>comments}}
     </div>
   </div>
 </template>
