--- a/client/templates/actions.html
+++ b/client/templates/actions.html
@@ -20,13 +20,13 @@
     </button>
       </div>
     </div>
-    <div class="field">
+    <!--<div class="field">
       <div class="control">
         <label class="checkbox">
       <input id="isTaskImportant" type="checkbox">
       Important
     </label>
       </div>
-    </div>
+    </div>-->
   </div>
 </template>
