--- a/client/stylesheets/_main.scss
+++ b/client/stylesheets/_main.scss
@@ -45,6 +45,12 @@
     background: #f5f5f5;
     margin: 3px;
     border-radius: 4px;
+    &:first-child {
+        margin-left: 0;
+    }
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 #backlog {
