you can now add descriptions to task

--- a/client/templates/comments.html
+++ b/client/templates/comments.html
@@ -6,7 +6,7 @@
         <input id="commentInput" class="input" type="text" placeholder="Écrire un commentaire">
       </div>
       <div class="control">
-        <button id="addComment" class="button is-primary">
+        <button id="addComment" class="button is-info">
       Ajouter
     </button>
       </div>
