--- a/client/templates/taskDescription.html
+++ b/client/templates/taskDescription.html
@@ -3,13 +3,13 @@
     <label class="label">Description de la tâche:</label>
     <div class="field has-addons">
       <div class="control is-100">
-        <textarea id="taskDescriptionInput" class="textarea" placeholder="Écrire une description"></textarea>
+        <textarea id="taskDescriptionInput" class="textarea" placeholder="Écrire une description">{{getClickedTask.description}}</textarea>
       </div>
     </div>
     <div class="field">
       <div class="control">
-        <button id="addTaskDescription" class="button is-primary">
-      Ajouter une description
+        <button id="addTaskDescription" class="button is-info">
+      Sauvegarder la description
     </button>
       </div>
     </div>
