--- a/client/templates/modal.html
+++ b/client/templates/modal.html
@@ -1,10 +1,10 @@
 <template name="modal">
   <div class="anti-modal-box">
-    <div class="anti-modal-body">
+    <div class="anti-modal-body {{getClickedTask.colorCode}}">
       <button class="button is-outlined is-danger is-small is-pulled-right deleteTask">Supprimer la tâche</button>
       <h2 id="modalTaskId">{{getClickedTask._id}}</h2>
-      <h2 class="title" id="modalTaskContent">{{getClickedTask.content}}</h2>
-      <h3 class="subtitle" id="modalTaskParent">{{getClickedTask.parent}}</h3>
+      <h2 class="title {{getClickedTask.colorCode}}" id="modalTaskContent">{{getClickedTask.content}} <span class="colorGrey">- {{getClickedTask.parent}}</span></h2>
+      <!--<h3 class="subtitle" id="modalTaskParent">{{getClickedTask.parent}}</h3>-->
       {{>taskDescription}}
       <p id="modalTaskDate">{{getClickedTask.date}}</p>
       {{>colorCode}}
