--- a/client/stylesheets/_main.scss
+++ b/client/stylesheets/_main.scss
@@ -8,6 +8,16 @@
     }
 }
 
+.container {
+    max-width: 100%!important;
+    width: auto!important;
+    padding: 30px;
+}
+
+.body {
+    margin-top: 52px!important;
+}
+
 .deleteTask {
     /*position: absolute!important;
     top: 8px;
