--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -5,6 +5,12 @@
 // colors
 @import 'colors';
 
+// stripes
+@import 'stripes';
+
+// navigation
+@import 'navigation';
+
 // modals
 @import 'modals';
 
