--- a/client/templates/actions.html
+++ b/client/templates/actions.html
@@ -15,7 +15,7 @@
         <input id="taskInput" class="input" type="text" placeholder="Tâche">
       </div>
       <div class="control">
-        <button id="addTask" class="button is-info">
+        <button id="addTask" class="button is-primary">
       Ajouter
     </button>
       </div>
