--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -1,7 +1,7 @@
 <template name="navigation">
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
-      <a class="navbar-item" href="http://bulma.io">
+      <a class="navbar-item" href="/">
         <h1 class="siteName title">Ezmi</h1>
       </a>
     </div>
