--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -11,6 +11,12 @@
 // navigation
 @import 'navigation';
 
+// login
+@import 'login';
+
+// register
+@import 'register';
+
 // modals
 @import 'modals';
 
