--- a/client/stylesheets/_main.scss
+++ b/client/stylesheets/_main.scss
@@ -2,16 +2,6 @@ html {
     overflow: hidden;
 }
 
-.card {
-    padding: 8px;
-    padding-left: 12px; //padding-right: 38px;
-    position: relative;
-    overflow: auto;
-    &:hover {
-        cursor: move;
-    }
-}
-
 .container {
     max-width: 100%!important;
     width: auto!important;
@@ -35,16 +25,27 @@ html {
     display: block;
 }
 
-#dragList .column {
-    background: #f5f5f5;
-    margin: 3px;
-    padding-bottom: 20px;
-    border-radius: 4px;
-    &:first-child {
-        margin-left: 0;
+#dragList {
+    .card {
+        padding: 8px;
+        padding-left: 12px; //padding-right: 38px;
+        position: relative;
+        overflow: auto;
+        &:hover {
+            cursor: move;
+        }
     }
-    &:last-child {
-        margin-right: 0;
+    .column {
+        background: #f5f5f5;
+        margin: 3px;
+        padding-bottom: 20px;
+        border-radius: 4px;
+        &:first-child {
+            margin-left: 0;
+        }
+        &:last-child {
+            margin-right: 0;
+        }
     }
 }
 
