--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,3 +1,28 @@
 <template name="login">
-  <h1>LOGIN</h1>
+    <form id="loginForm" class="card">
+      <h2 class="subtitle has-text-centered">Se connecter</h2>
+      <div class="field">
+        <p class="control has-icons-left">
+          <input class="input" type="text" name="username" placeholder="Nom d'utilisateur">
+          <span class="icon is-small is-left">
+      <i class="fa fa-user"></i>
+    </span>
+        </p>
+      </div>
+      <div class="field">
+        <p class="control has-icons-left">
+          <input class="input" type="password" name="password" placeholder="Mot de passe">
+          <span class="icon is-small is-left">
+      <i class="fa fa-lock"></i>
+    </span>
+        </p>
+      </div>
+      <div class="field">
+        <p class="control">
+          <button class="button is-success is-100">
+      Se connecter!
+    </button>
+        </p>
+      </div>
+    </form>
 </template>
