--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -1,3 +1,28 @@
 <template name="register">
-  <h1>register</h1>
+  <form id="registerForm" class="card">
+    <h2 class="subtitle has-text-centered">Créer un compte</h2>
+    <div class="field">
+      <p class="control has-icons-left">
+        <input class="input" type="text" name="username" placeholder="Nom d'utilisateur">
+        <span class="icon is-small is-left">
+      <i class="fa fa-user"></i>
+    </span>
+      </p>
+    </div>
+    <div class="field">
+      <p class="control has-icons-left">
+        <input class="input" type="password" name="password" placeholder="Mot de passe">
+        <span class="icon is-small is-left">
+      <i class="fa fa-lock"></i>
+    </span>
+      </p>
+    </div>
+    <div class="field">
+      <p class="control">
+        <button class="button is-success is-100">
+      Créer un compte!
+    </button>
+      </p>
+    </div>
+  </form>
 </template>
